Tests fixing mobile width overflow

--- a/wp-content/themes/plusplus2019/style.css
+++ b/wp-content/themes/plusplus2019/style.css
@@ -718,7 +718,7 @@ footer li {
 
 .full-horiz {
   margin: 40px 0;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .blurb {
